<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consultarpago"
            android:icon="@drawable/ic_attach_money_black_48dp"
            android:title="@string/consultarPago" />
        <item
            android:id="@+id/nav_operacionvehiculo"
            android:icon="@drawable/ic_directions_car_black_48dp"
            android:title="@string/operVehiculo" />
        <item
            android:id="@+id/nav_papeletas"
            android:icon="@drawable/ic_content_copy_black_48dp"
            android:title="@string/papeletas" />
        <item
            android:id="@+id/nav_regyestadocivil"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/regyestcivil" />
    </group>


</menu>
