<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.muniappbeta.fragments.ConsultarPagoFragment"
 android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/gerenciadadmtributaria"
            android:id="@+id/imageView6"
            android:layout_weight="2"
            android:scaleType="centerInside" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:text="@string/RegistroCivil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnRegistroCivil"
                        android:drawableLeft="@drawable/ic_perm_identity_black"
                        />

                    <Button
                        android:text="@string/CajaCentral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCajaCentral"
                        android:drawableLeft="@drawable/ic_attach_money_black"
                         />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:elevation="0dp">

                <TextView
                    android:text="@string/ruc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
